crates/apollo-compiler/test_data/diagnostics/0033_object_type_definition_with_duplicate_fields.txt
Error: duplicate definitions for the `name` field of object type `Query`
   ╭─[0033_object_type_definition_with_duplicate_fields.graphql:3:3]
   │
 2 │   name: String
   │   ──┬─  
   │     ╰─── previous definition of `name` here
 3 │   name: String
   │   ──────┬─────  
   │         ╰─────── `name` redefined here
───╯

